tests/ui/const-generics/generic_const_exprs/cross_crate_predicate.stderr
error: unconstrained generic constant
  --> $DIR/cross_crate_predicate.rs:7:44
   |
LL |     let _ = const_evaluatable_lib::test1::<T>();
   |                                            ^
   |
note: required by a bound in `test1`
  --> $DIR/auxiliary/const_evaluatable_lib.rs:5:10
   |
LL | pub fn test1<T>() -> [u8; std::mem::size_of::<T>() - 1]
   |        ----- required by a bound in this function
LL | where
LL |     [u8; std::mem::size_of::<T>() - 1]: Sized,
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `test1`
help: try adding a `where` bound
   |
LL | fn user<T>() where [(); std::mem::size_of::<T>() - 1]: {
   |              +++++++++++++++++++++++++++++++++++++++++

error: unconstrained generic constant
  --> $DIR/cross_crate_predicate.rs:7:44
   |
LL |     let _ = const_evaluatable_lib::test1::<T>();
   |                                            ^
   |
note: required by a bound in `test1`
  --> $DIR/auxiliary/const_evaluatable_lib.rs:3:27
   |
LL | pub fn test1<T>() -> [u8; std::mem::size_of::<T>() - 1]
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `test1`
help: try adding a `where` bound
   |
LL | fn user<T>() where [(); std::mem::size_of::<T>() - 1]: {
   |              +++++++++++++++++++++++++++++++++++++++++

error: unconstrained generic constant
  --> $DIR/cross_crate_predicate.rs:7:13
   |
LL |     let _ = const_evaluatable_lib::test1::<T>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try adding a `where` bound
   |
LL | fn user<T>() where [(); std::mem::size_of::<T>() - 1]: {
   |              +++++++++++++++++++++++++++++++++++++++++

error: unconstrained generic constant
  --> $DIR/cross_crate_predicate.rs:7:13
   |
LL |     let _ = const_evaluatable_lib::test1::<T>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required by a bound in `test1`
  --> $DIR/auxiliary/const_evaluatable_lib.rs:5:10
   |
LL | pub fn test1<T>() -> [u8; std::mem::size_of::<T>() - 1]
   |        ----- required by a bound in this function
LL | where
LL |     [u8; std::mem::size_of::<T>() - 1]: Sized,
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `test1`
help: try adding a `where` bound
   |
LL | fn user<T>() where [(); std::mem::size_of::<T>() - 1]: {
   |              +++++++++++++++++++++++++++++++++++++++++

error: aborting due to 4 previous errors

